--- a/gallery.html
+++ b/gallery.html
@@ -197,6 +197,20 @@
       .gallery a:hover::after {
         opacity: 1;
       }
+      /* Initially hide images */
+      .gallery-img.hidden {
+        opacity: 0;
+        transform: translateY(
+          50px
+        ); /* Slightly move the image down for a smoother transition */
+        transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out; /* Smooth fade-in and slide-up */
+      }
+
+      /* When images are visible, set opacity to 1 */
+      .gallery-img.visible {
+        opacity: 1;
+        transform: translateY(0); /* Move image back to its original position */
+      }
     </style>
   </head>
   <style></style>
@@ -224,126 +238,286 @@
             <h2>Galeria zdjęć</h2>
           </header>
           <div class="gallery" id="gallery">
-            <a href="foto/1.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/1.jpeg" alt="Image 1"
-            /></a>
-            <a href="foto/2.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/2.jpeg" alt="Image 2"
-            /></a>
-            <a href="foto/3.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/3.jpeg" alt="Image 3"
-            /></a>
-            <a href="foto/4.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/4.jpeg" alt="Image 4"
-            /></a>
-            <a href="foto/5.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/5.jpeg" alt="Image 5"
-            /></a>
-            <a href="foto/6.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/6.jpeg" alt="Image 6"
-            /></a>
-            <a href="foto/7.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/7.jpeg" alt="Image 7"
-            /></a>
-            <a href="foto/8.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/8.jpeg" alt="Image 8"
-            /></a>
-            <a href="foto/9.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/9.jpeg" alt="Image 9"
-            /></a>
-            <a href="foto/10.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/10.jpeg" alt="Image 10"
-            /></a>
-            <a href="foto/11.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/11.jpeg" alt="Image 11"
-            /></a>
-            <a href="foto/12.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/12.jpeg" alt="Image 12"
-            /></a>
-            <a href="foto/13.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/13.jpeg" alt="Image 13"
-            /></a>
-            <a href="foto/14.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/14.jpeg" alt="Image 14"
-            /></a>
-            <a href="foto/15.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/15.jpeg" alt="Image 15"
-            /></a>
-            <a href="foto/16.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/16.jpeg" alt="Image 16"
-            /></a>
-            <a href="foto/17.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/17.jpeg" alt="Image 17"
-            /></a>
-            <a href="foto/18.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/18.jpeg" alt="Image 18"
-            /></a>
-            <a href="foto/19.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/19.jpeg" alt="Image 19"
-            /></a>
-            <a href="foto/20.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/20.jpeg" alt="Image 20"
-            /></a>
-            <a href="foto/21.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/21.jpeg" alt="Image 21"
-            /></a>
-            <a href="foto/22.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/22.jpeg" alt="Image 22"
-            /></a>
-            <a href="foto/23.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/23.jpeg" alt="Image 23"
-            /></a>
-            <a href="foto/24.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/24.jpeg" alt="Image 24"
-            /></a>
-            <a href="foto/25.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/25.jpeg" alt="Image 25"
-            /></a>
-            <a href="foto/26.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/26.jpeg" alt="Image 26"
-            /></a>
-            <a href="foto/27.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/27.jpeg" alt="Image 27"
-            /></a>
-            <a href="foto/28.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/28.jpeg" alt="Image 28"
-            /></a>
-            <a href="foto/29.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/29.jpeg" alt="Image 29"
-            /></a>
-            <a href="foto/30.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/30.jpeg" alt="Image 30"
-            /></a>
-            <a href="foto/31.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/31.jpeg" alt="Image 31"
-            /></a>
-            <a href="foto/32.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/32.jpeg" alt="Image 32"
-            /></a>
-            <a href="foto/33.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/33.jpeg" alt="Image 33"
-            /></a>
-            <a href="foto/34.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/34.jpeg" alt="Image 34"
-            /></a>
-            <a href="foto/35.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/35.jpeg" alt="Image 35"
-            /></a>
-            <a href="foto/36.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/36.jpeg" alt="Image 36"
-            /></a>
-            <a href="foto/37.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/37.jpeg" alt="Image 37"
-            /></a>
-            <a href="foto/38.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/38.jpeg" alt="Image 38"
-            /></a>
-            <a href="foto/39.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/39.jpeg" alt="Image 39"
-            /></a>
-            <a href="foto/40.jpeg" data-lightbox="gallery" onclick="hideNav()"
-              ><img src="thumbnail/40.jpeg" alt="Image 40"
-            /></a>
+            <a href="foto/1.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/1.jpeg"
+                alt="Image 1"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/2.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/2.jpeg"
+                alt="Image 2"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/3.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/3.jpeg"
+                alt="Image 3"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/4.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/4.jpeg"
+                alt="Image 4"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/5.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/5.jpeg"
+                alt="Image 5"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/6.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/6.jpeg"
+                alt="Image 6"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/7.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/7.jpeg"
+                alt="Image 7"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/8.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/8.jpeg"
+                alt="Image 8"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/9.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/9.jpeg"
+                alt="Image 9"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/10.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/10.jpeg"
+                alt="Image 10"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/11.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/11.jpeg"
+                alt="Image 11"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/12.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/12.jpeg"
+                alt="Image 12"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/13.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/13.jpeg"
+                alt="Image 13"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/14.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/14.jpeg"
+                alt="Image 14"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/15.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/15.jpeg"
+                alt="Image 15"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/16.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/16.jpeg"
+                alt="Image 16"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/17.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/17.jpeg"
+                alt="Image 17"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/18.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/18.jpeg"
+                alt="Image 18"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/19.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/19.jpeg"
+                alt="Image 19"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/20.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/20.jpeg"
+                alt="Image 20"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/21.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/21.jpeg"
+                alt="Image 21"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/22.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/22.jpeg"
+                alt="Image 22"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/23.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/23.jpeg"
+                alt="Image 23"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/24.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/24.jpeg"
+                alt="Image 24"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/25.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/25.jpeg"
+                alt="Image 25"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/26.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/26.jpeg"
+                alt="Image 26"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/27.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/27.jpeg"
+                alt="Image 27"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/28.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/28.jpeg"
+                alt="Image 28"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/29.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/29.jpeg"
+                alt="Image 29"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/30.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/30.jpeg"
+                alt="Image 30"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/31.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/31.jpeg"
+                alt="Image 31"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/32.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/32.jpeg"
+                alt="Image 32"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/33.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/33.jpeg"
+                alt="Image 33"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/34.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/34.jpeg"
+                alt="Image 34"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/35.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/35.jpeg"
+                alt="Image 35"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/36.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/36.jpeg"
+                alt="Image 36"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/37.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/37.jpeg"
+                alt="Image 37"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/38.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/38.jpeg"
+                alt="Image 38"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/39.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/39.jpeg"
+                alt="Image 39"
+                class="gallery-img hidden"
+              />
+            </a>
+            <a href="foto/40.jpeg" data-lightbox="gallery" onclick="hideNav()">
+              <img
+                src="thumbnail/40.jpeg"
+                alt="Image 40"
+                class="gallery-img hidden"
+              />
+            </a>
           </div>
         </div>
       </div>
@@ -450,6 +624,33 @@
           closeButton.setAttribute("onclick", "showNav()");
         }, 1000); // Delay the injection of the onclick by 1 second
       }
+    </script>
+    <script>
+      // Function to reveal an image when it comes into view
+      function revealImage(image) {
+        image.classList.remove("hidden"); // Remove the hidden class to reveal the image
+        image.classList.add("visible"); // Add a visible class for transition effects
+      }
+
+      // Set up IntersectionObserver to observe the images
+      const observer = new IntersectionObserver(
+        (entries, observer) => {
+          entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+              // When the image enters the viewport
+              revealImage(entry.target); // Reveal the image
+              observer.unobserve(entry.target); // Stop observing the image once it's revealed
+            }
+          });
+        },
+        {
+          rootMargin: "50px 0px 0px 0px", // Trigger when the image is 100px before it enters the viewport
+        }
+      );
+
+      // Select all images with the 'hidden' class and observe them
+      const images = document.querySelectorAll(".gallery-img.hidden");
+      images.forEach((image) => observer.observe(image)); // Observe each image
     </script>
   </body>
 </html>
