--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,18 @@
   <style></style>
   <body class="is-preload">
     <!-- Header -->
-    <header id="header" class="alt">
+    <header
+      style="max-height: 600px; min-height: 400px"
+      id="header"
+      class="alt video-background"
+    >
+      <!-- Nav -->
+
+      <video autoplay muted loop id="bg-video">
+        <source src="images/header.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+
       <!-- Nav -->
       <nav id="nav">
         <ul>
