--- a/about.html
+++ b/about.html
@@ -35,16 +35,59 @@
         margin-top: 2px;
         margin-bottom: 2px;
       }
+      #header.video-background {
+        position: relative;
+        min-height: 50vh; /* Minimum height: 50% of viewport height */
+        max-height: 50vw; /* Maximum height: 10% of viewport width (adjust this as needed) */
+        width: 100%;
+        overflow: hidden;
+      }
+
+      #bg-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Ensure the video covers the container */
+        z-index: -1;
+      }
+      @media (max-width: 1024px) {
+        #header.video-background {
+          min-height: 40vh; /* Reduce min-height to 40% of viewport height */
+          max-height: 40vw; /* Reduce max-height to 40% of viewport width */
+        }
+
+        #bg-video {
+          object-fit: cover; /* Ensure the video still covers the container */
+        }
+      }
+
+      /* Media Query for mobile screens */
+      @media (max-width: 768px) {
+        #header.video-background {
+          min-height: 30vh; /* Reduce min-height to 30% of viewport height */
+          max-height: 35vw; /* Reduce max-height to 35% of viewport width */
+        }
+
+        #bg-video {
+          object-fit: cover; /* Ensure the video still covers the container */
+        }
+      }
+
+      /* Media Query for very small screens (like phones in portrait mode) */
+      @media (max-width: 480px) {
+        #header.video-background {
+          min-height: 25vh; /* Further reduce min-height to 25% of viewport height */
+          max-height: 30vw; /* Further reduce max-height to 30% of viewport width */
+        }
+      }
     </style>
   </head>
   <style></style>
   <body class="is-preload">
     <!-- Header -->
-    <header
-      style="max-height: 600px; min-height: 400px"
-      id="header"
-      class="alt video-background"
-    >
+    <header id="header" class="alt video-background">
       <!-- Nav -->
 
       <video autoplay muted loop id="bg-video">
