--- a/gallery.html
+++ b/gallery.html
@@ -161,7 +161,7 @@
       .gallery img {
         transition: transform 0.3s ease-in-out;
         display: block;
-        width: 150px; /* Adjust thumbnail size */
+        width: 300px; /* Adjust thumbnail size */
         height: auto;
         border-radius: 8px;
       }
@@ -290,280 +290,280 @@
           <div class="gallery" id="gallery">
             <a href="foto/1.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/1.jpeg"
+                src="thumbnail/fixedthumb1.jpg"
                 alt="Image 1"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/2.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/2.jpeg"
+                src="thumbnail/fixedthumb2.jpg"
                 alt="Image 2"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/3.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/3.jpeg"
+                src="thumbnail/fixedthumb3.jpg"
                 alt="Image 3"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/4.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/4.jpeg"
+                src="thumbnail/fixedthumb4.jpg"
                 alt="Image 4"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/5.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/5.jpeg"
+                src="thumbnail/fixedthumb5.jpg"
                 alt="Image 5"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/6.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/6.jpeg"
+                src="thumbnail/fixedthumb6.jpg"
                 alt="Image 6"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/7.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/7.jpeg"
+                src="thumbnail/fixedthumb7.jpg"
                 alt="Image 7"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/8.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/8.jpeg"
+                src="thumbnail/fixedthumb8.jpg"
                 alt="Image 8"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/9.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/9.jpeg"
+                src="thumbnail/fixedthumb9.jpg"
                 alt="Image 9"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/10.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/10.jpeg"
+                src="thumbnail/fixedthumb10.jpg"
                 alt="Image 10"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/11.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/11.jpeg"
+                src="thumbnail/fixedthumb11.jpg"
                 alt="Image 11"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/12.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/12.jpeg"
+                src="thumbnail/fixedthumb12.jpg"
                 alt="Image 12"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/13.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/13.jpeg"
+                src="thumbnail/fixedthumb13.jpg"
                 alt="Image 13"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/14.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/14.jpeg"
+                src="thumbnail/fixedthumb14.jpg"
                 alt="Image 14"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/15.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/15.jpeg"
+                src="thumbnail/fixedthumb15.jpg"
                 alt="Image 15"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/16.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/16.jpeg"
+                src="thumbnail/fixedthumb16.jpg"
                 alt="Image 16"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/17.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/17.jpeg"
+                src="thumbnail/fixedthumb17.jpg"
                 alt="Image 17"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/18.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/18.jpeg"
+                src="thumbnail/fixedthumb18.jpg"
                 alt="Image 18"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/19.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/19.jpeg"
+                src="thumbnail/fixedthumb19.jpg"
                 alt="Image 19"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/20.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/20.jpeg"
+                src="thumbnail/fixedthumb20.jpg"
                 alt="Image 20"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/21.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/21.jpeg"
+                src="thumbnail/fixedthumb21.jpg"
                 alt="Image 21"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/22.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/22.jpeg"
+                src="thumbnail/fixedthumb22.jpg"
                 alt="Image 22"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/23.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/23.jpeg"
+                src="thumbnail/fixedthumb23.jpg"
                 alt="Image 23"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/24.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/24.jpeg"
+                src="thumbnail/fixedthumb24.jpg"
                 alt="Image 24"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/25.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/25.jpeg"
+                src="thumbnail/fixedthumb25.jpg"
                 alt="Image 25"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/26.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/26.jpeg"
+                src="thumbnail/fixedthumb26.jpg"
                 alt="Image 26"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/27.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/27.jpeg"
+                src="thumbnail/fixedthumb27.jpg"
                 alt="Image 27"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/28.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/28.jpeg"
+                src="thumbnail/fixedthumb28.jpg"
                 alt="Image 28"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/29.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/29.jpeg"
+                src="thumbnail/fixedthumb29.jpg"
                 alt="Image 29"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/30.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/30.jpeg"
+                src="thumbnail/fixedthumb30.jpg"
                 alt="Image 30"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/31.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/31.jpeg"
+                src="thumbnail/fixedthumb31.jpg"
                 alt="Image 31"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/32.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/32.jpeg"
+                src="thumbnail/fixedthumb32.jpg"
                 alt="Image 32"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/33.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/33.jpeg"
+                src="thumbnail/fixedthumb33.jpg"
                 alt="Image 33"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/34.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/34.jpeg"
+                src="thumbnail/fixedthumb34.jpg"
                 alt="Image 34"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/35.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/35.jpeg"
+                src="thumbnail/fixedthumb35.jpg"
                 alt="Image 35"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/36.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/36.jpeg"
+                src="thumbnail/fixedthumb36.jpg"
                 alt="Image 36"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/37.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/37.jpeg"
+                src="thumbnail/fixedthumb37.jpg"
                 alt="Image 37"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/38.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/38.jpeg"
+                src="thumbnail/fixedthumb38.jpg"
                 alt="Image 38"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/39.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/39.jpeg"
+                src="thumbnail/fixedthumb39.jpg"
                 alt="Image 39"
                 class="gallery-img hidden"
               />
             </a>
             <a href="foto/40.jpeg" data-lightbox="gallery" onclick="hideNav()">
               <img
-                src="thumbnail/40.jpeg"
+                src="thumbnail/fixedthumb40.jpg"
                 alt="Image 40"
                 class="gallery-img hidden"
               />
