--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     .widthfix {
       width: 50% !important;
     }
+
     #header.video-background {
       position: relative;
       min-height: 50vh; /* Minimum height: 50% of viewport height */
-      max-height: 50vw; /* Maximum height: 10% of viewport width (adjust this as needed) */
+      max-height: 50vw; /* Maximum height: 50% of viewport width */
       width: 100%;
       overflow: hidden;
     }
@@ -31,16 +32,25 @@
       width: 100%;
       height: 100%;
       object-fit: cover; /* Ensure the video covers the container */
+      object-position: right center; /* Align the video to the right */
       z-index: -1;
     }
+
+    /* Media Query for tablets */
     @media (max-width: 1024px) {
       #header.video-background {
         min-height: 40vh; /* Reduce min-height to 40% of viewport height */
         max-height: 40vw; /* Reduce max-height to 40% of viewport width */
       }
-
       #bg-video {
-        object-fit: cover; /* Ensure the video still covers the container */
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Ensure the video covers the container */
+        object-position: right center; /* Align the video to the right */
+        z-index: -1;
       }
     }
 
@@ -52,7 +62,14 @@
       }
 
       #bg-video {
-        object-fit: cover; /* Ensure the video still covers the container */
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Ensure the video covers the container */
+        object-position: right center; /* Align the video to the right */
+        z-index: -1;
       }
     }
 
@@ -61,6 +78,17 @@
       #header.video-background {
         min-height: 25vh; /* Further reduce min-height to 25% of viewport height */
         max-height: 30vw; /* Further reduce max-height to 30% of viewport width */
+      }
+
+      #bg-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Ensure the video covers the container */
+        object-position: right center; /* Align the video to the right */
+        z-index: -1;
       }
     }
   </style>
